@@ -1,0 +1,21 @@
+﻿using Roguelike.Common.Global;
+using Roguelike.Common.Utils;
+using System.Collections.Generic;
+using Terraria;
+using Terraria.ID;
+using Terraria.ModLoader;
+
+namespace Roguelike.Common.Mode.RoguelikeMode.RoguelikeChange.ItemOverhaul.ItemOverhaul.Specific.Accessories;
+internal class Roguelike_SorcererEmblem : GlobalItem {
+	public override bool AppliesToEntity(Item entity, bool lateInstantiation) {
+		return entity.type == ItemID.SorcererEmblem;
+	}
+	public override void UpdateEquip(Item item, Player player) {
+		PlayerStatsHandle handler = player.ModPlayerStats();
+		handler.Magic_CritDamage += .3f;
+		player.GetCritChance(DamageClass.Magic) += 5;
+	}
+	public override void ModifyTooltips(Item item, List<TooltipLine> tooltips) {
+		ModUtils.AddTooltip(ref tooltips, new(Mod, "", ModUtils.LocalizationText("RoguelikeRework", item.Name)));
+	}
+}
