@@ -20,7 +20,6 @@ namespace Roguelike.Contents.Items.Consumable.Spawner {
 			for (int i = 0; i <= spawnY; i++) {
 				Dust.NewDustPerfect(player.Center - new Vector2((float)(Math.Sin(i * 8) * (i * 0.25)), i * 1.2f), DustID.PurpleTorch);
 				Dust.NewDustPerfect(new Vector2(player.Center.X, player.Center.Y - spawnY), DustID.BoneTorch, Main.rand.NextVector2Unit() * 65);
-				Terraria.Audio.SoundEngine.PlaySound(SoundID.DD2_EtherianPortalOpen with { Volume = .5f }, player.Center);
 			}
 		}
 		public override bool CanUseItem(Player player) {
